--- a/Offset_New.css
+++ b/Offset_New.css
@@ -59,10 +59,19 @@ h6 {
 
 .subtext {
   font-family: "Inter", sans-serif;
-  font-size: 20px;
+  font-size: 2vh;
   font-weight: 300;
-  margin-top: 40px;
-  width: 600px;
+  margin-top: 3vh;
+  width: 40vw;
+  text-align: center;
+}
+
+.subtext1 {
+  font-family: "Inter", sans-serif;
+  font-size: 1.5vh;
+  font-weight: 200;
+  margin-top: 4vh;
+  width: 45vw;
   text-align: center;
 }
 
@@ -87,15 +96,22 @@ h6 {
   display: flex;
   justify-content: space-between;
   font-family: "Inter", sans-serif;
-  font-size: 12px;
-  font-weight: 400;
-  margin: 50px;
+  font-size: 1.5vh;
+  font-weight: 300;
+  margin: 3vh;
 }
 
 h1 {
   font-family: "Inter", sans-serif;
-  font-size: 128px;
-  font-weight: 900;
+  font-size: 10vh;
+  font-weight: 400;
+  margin-top: 0vh;
+}
+
+video {
+  height: 40vh;
+  width: auto;
+  margin-top: 0vh;
 }
 
 .center_flex{
@@ -104,6 +120,7 @@ h1 {
   justify-content: center;
   align-items: center;
   margin: 50px;
+  height: 50vh;
 }
 
 .allContent {
@@ -114,7 +131,14 @@ h1 {
   justify-content: space-between;
 }
 
-.swiper {
-  width: 1280px;
-  height: 720px;
+.swiper{
+  width: 640px;
+  height: 360px;
 }
+
+.swiper [class^="swiper-button-"]{
+  color: #ffffff; 
+  width: 4vw;
+  height: 0vw;
+}
+
