--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,9 @@ header h1 {
   right: 0;
   color: #ffffff;
   padding: 1em;
+   font-family: "Inter", sans-serif;
+  font-size: 1.5vh;
+  font-weight: 300;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   opacity: 0;
@@ -176,7 +179,7 @@ header h1 {
   margin-left: -22px;
   margin-top: -22px;
   border-radius: 50%;
-  background: #dc717d url("../img/cd-arrows.svg") no-repeat center center;
+  background: #000000 url("../img/cd-arrows.svg") no-repeat center center;
   cursor: move;
   box-shadow: 0 0 0 6px rgba(0, 0, 0, 0.2), 0 0 10px rgba(0, 0, 0, 0.6), inset 0 1px 0 rgba(255, 255, 255, 0.3);
   opacity: 0;
@@ -188,7 +191,7 @@ header h1 {
 }
 .cd-handle.draggable {
   /* change background color when element is active */
-  background-color: #445b7c;
+  background-color: #ffffff;
 }
 .is-visible .cd-handle {
   opacity: 1;
