--- a/css/style.css
+++ b/css/style.css
@@ -204,3 +204,9 @@ header h1 {
   -moz-transition: -moz-transform 0.3s 0.7s, opacity 0s 0.7s;
   transition: transform 0.3s 0.7s, opacity 0s 0.7s;
 }
+
+.swiper-pagination-bullet {
+  width: 20px;
+  height: 20px;
+  margin: 10px;
+}
