--- a/Offset_New.css
+++ b/Offset_New.css
@@ -142,3 +142,16 @@ video {
   height: 0vw;
 }
 
+
+/* Overwrite Libary
+}*/
+
+.swiper-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet, .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
+  width: 10px;
+  height: 10px;
+  margin: 0px;
+}
+
+.swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction {
+      bottom: -7px;
+}
